Upgrade Java to 19
Also:
- fix .dockerignore using the old groovy gradle scripts
- replace pattern matching switch with IFs
- make the "cancel" buttons delete their respective message
- Dockerfile: remove "--link" argument from the COPY statements
- Dockerfile: switch WORKDIR and COPY commands
- CommandButtonUtils: remove "getDeleteButton"